--- a/app/src/main/res/layout/update_kyc_layout.xml
+++ b/app/src/main/res/layout/update_kyc_layout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -35,10 +35,10 @@
             android:id="@+id/img_dismiss_dialog"
             android:layout_width="24dp"
             android:layout_height="24dp"
+            android:contentDescription="TODO"
             android:src="@drawable/clear_field"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:contentDescription="TODO" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
             android:id="@+id/edt_edit_pannumber"
@@ -48,6 +48,7 @@
             android:layout_weight="1"
             android:background="@drawable/edittext_shadow"
             android:hint="@string/pannumber_1"
+            android:importantForAutofill="no"
             android:inputType="text"
             android:paddingLeft="@dimen/margin10dp"
             android:paddingTop="@dimen/margin10dp"
@@ -58,11 +59,24 @@
             android:textColorHint="@color/lightgrey"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_update_address"
-            tools:ignore="TextFields"
-            android:importantForAutofill="no" />
+            tools:ignore="TextFields" />
+
+        <Button
+            android:id="@+id/btn_pan_image"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_marginTop="@dimen/margin5dp"
+            android:background="#3F58B3"
+            android:drawableStart="@drawable/ic_baseline_add__browse"
+            android:gravity="center"
+            android:minHeight="@dimen/margin35sp"
+            android:text="@string/browse"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/edt_edit_pannumber" />
 
         <EditText
-            android:maxLength="12"
             android:id="@+id/edt_edit_addharnumer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -70,7 +84,9 @@
             android:layout_weight="1"
             android:background="@drawable/edittext_shadow"
             android:hint="@string/aadharnumber_1"
+            android:importantForAutofill="no"
             android:inputType="text"
+            android:maxLength="12"
             android:paddingLeft="@dimen/margin10dp"
             android:paddingTop="@dimen/margin10dp"
             android:paddingRight="@dimen/margin10dp"
@@ -79,8 +95,24 @@
             android:text="@={kyc.aadharNo}"
             android:textColorHint="@color/lightgrey"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/edt_edit_pannumber"
-            android:importantForAutofill="no" />
+            app:layout_constraintTop_toBottomOf="@+id/btn_pan_image" />
+
+
+        <Button
+            android:id="@+id/btn_aadhar_image"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_marginTop="@dimen/margin5dp"
+            android:background="#3F58B3"
+            android:drawableStart="@drawable/ic_baseline_add__browse"
+            android:gravity="center"
+            android:minHeight="@dimen/margin35sp"
+            android:text="@string/browse"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/edt_edit_addharnumer" />
+
 
         <EditText
             android:id="@+id/edt_additional_id"
@@ -89,10 +121,11 @@
             android:layout_marginTop="@dimen/margin10dp"
             android:layout_weight="1"
             android:background="@drawable/edittext_shadow"
-            android:hint="@string/voterid_1"
             android:clickable="false"
             android:cursorVisible="false"
             android:focusable="false"
+            android:hint="@string/voterid_1"
+            android:importantForAutofill="no"
             android:paddingLeft="@dimen/margin10dp"
             android:paddingTop="@dimen/margin10dp"
             android:paddingRight="@dimen/margin10dp"
@@ -101,8 +134,23 @@
             android:text="@={kyc.idNo}"
             android:textColorHint="@color/lightgrey"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/edt_edit_addharnumer"
-            android:importantForAutofill="no" />
+            app:layout_constraintTop_toBottomOf="@+id/btn_aadhar_image" />
+
+
+        <Button
+            android:id="@+id/btn_aditional_image"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_marginTop="@dimen/margin5dp"
+            android:background="#3F58B3"
+            android:drawableStart="@drawable/ic_baseline_add__browse"
+            android:gravity="center"
+            android:minHeight="@dimen/margin35sp"
+            android:text="@string/browse"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/edt_additional_id" />
 
 
         <Button
@@ -119,7 +167,7 @@
             android:text="@string/update"
             android:textColor="@color/white"
             android:textSize="@dimen/margin18sp"
-            app:layout_constraintTop_toBottomOf="@+id/edt_additional_id" />
+            app:layout_constraintTop_toBottomOf="@+id/btn_aditional_image" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
