--- a/app/src/main/res/layout/activity_tranfer_money.xml
+++ b/app/src/main/res/layout/activity_tranfer_money.xml
@@ -236,7 +236,98 @@
                     app:layout_constraintTop_toBottomOf="@id/edt_paytm_number">
 
 
+                    <LinearLayout
+                        android:id="@+id/relative_bank_list"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/margin20dp"
+                        android:orientation="vertical"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="@font/lato_bold"
+                                android:text="@string/bankname"
+                                android:textColor="@color/botton_nav_inactive_color"
+                                android:textSize="@dimen/margin16sp" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="@dimen/margin20dp"
+                                android:fontFamily="@font/lato_bold"
+                                android:text="SBI Bank"
+                                android:textColor="@color/black"
+                                android:textSize="@dimen/margin16sp" />
+
+
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/margin10dp"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="@font/lato_bold"
+                                android:text="@string/accnumber"
+                                android:textColor="@color/botton_nav_inactive_color"
+                                android:textSize="@dimen/margin16sp" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="@dimen/margin20dp"
+                                android:fontFamily="@font/lato_bold"
+                                android:text="SBI Bank"
+                                android:textColor="@color/black"
+                                android:textSize="@dimen/margin16sp" />
+
+
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/margin10dp"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="@font/lato_bold"
+                                android:text="@string/ifsccode1"
+                                android:textColor="@color/botton_nav_inactive_color"
+                                android:textSize="@dimen/margin16sp" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="@dimen/margin20dp"
+                                android:fontFamily="@font/lato_bold"
+                                android:text="SBI Bank"
+                                android:textColor="@color/black"
+                                android:textSize="@dimen/margin16sp" />
+
+
+                        </LinearLayout>
+
+
+                    </LinearLayout>
+
+
                     <TextView
+
                         android:id="@+id/tv_transfer_mode"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -248,7 +339,7 @@
                         android:text="@string/transactionmode"
                         android:textColor="@color/black"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:layout_constraintTop_toBottomOf="@+id/relative_bank_list" />
 
                     <RadioButton
                         android:id="@+id/rb_neft"
