--- a/app/src/main/res/layout/activity_payment_successful.xml
+++ b/app/src/main/res/layout/activity_payment_successful.xml
@@ -218,13 +218,13 @@
 
             <TextView
                 android:gravity="center"
-                android:id="@+id/tv_reqesttransfermoney_3"
+                android:id="@+id/tv_trade_wallet_msg"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin20dp"
                 android:layout_marginEnd="@dimen/margin20dp"
                 android:fontFamily="@font/lato_bold"
-                android:text="@string/transfermoney2"
+                android:text="@string/transfermoney_spwallet"
                 android:textColor="@color/black"
                 android:textSize="@dimen/margin18sp"
                 app:layout_constraintLeft_toLeftOf="parent"
