--- a/app/src/main/res/layout/activity_tranfer_money.xml
+++ b/app/src/main/res/layout/activity_tranfer_money.xml
@@ -252,30 +252,37 @@
                     android:id="@+id/constraint_bank_transfer_mode"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-
-                    app:layout_constraintStart_toStartOf="@+id/edt_paytm_number"
+                    android:visibility="@{transfermoney.bank ? View.VISIBLE : View.GONE,default=gone}"
                     app:layout_constraintTop_toBottomOf="@id/edt_paytm_name">
 
 
                     <androidx.cardview.widget.CardView
-                        android:padding="@dimen/margin10dp"
                         android:id="@+id/bank_list_card_view"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:padding="@dimen/margin10dp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         card_view:cardBackgroundColor="@android:color/white"
                         card_view:cardElevation="2dp"
                         card_view:cardUseCompatPadding="true">
 
+                        <ImageView
+                            android:id="@+id/iv_expand_more"
+                            android:layout_width="@dimen/margin30dp"
+                            android:layout_height="@dimen/margin30dp"
+                            android:layout_gravity="end"
+                            android:layout_marginEnd="@dimen/margin15dp"
+                            android:src="@drawable/ic_baseline_expand_more_24" />
+
                         <LinearLayout
-                            android:paddingTop="@dimen/margin10dp"
-                            android:paddingBottom="@dimen/margin10dp"
                             android:id="@+id/relative_bank_list"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="@dimen/margin20dp"
-                            android:orientation="vertical">
+                            android:orientation="vertical"
+                            android:paddingTop="@dimen/margin10dp"
+                            android:paddingBottom="@dimen/margin10dp">
 
                             <LinearLayout
                                 android:layout_width="match_parent"
